--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,20 @@ language: python
 python:
   - "2.7"
   - "3.4"
-script: python setup.py test
+  - "3.5"
+  - "3.6"
 
+install:
+  - pip install -U pip
+  - pip install codecov
+  - pip install -r requirements_dev.txt
+
+before_script:
+  - pip freeze
+
+script:
+  - py.test --cov choose
+  - flake8 .
+
+after_success:
+  - codecov
